[package]
name = "AppTimer-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
 
[build-dependencies]
embed-manifest = "1.3.1"
winres = "0.1.12"

[dependencies]
chrono = "0.4.26"
csv = "1.2.2"
home = "0.5.5"
log = "0.4.19"
native-windows-derive = "1.0.5"
native-windows-gui = "1.0.13"
rust-ini = "0.19.0"
serde = "1.0.164"
serde_derive = "1.0.164"
simplelog = "0.12.1"
